# shell_assistant

./: CHANGELOG.md  README.md  build_releases.sh  justfile  pubspec.yaml
.github/workflows/: release.yml
integration_test/: simple_test.dart
lib/: main.dart  theme.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb
lib/pages/: boot_options.dart  bypass_signature.dart  dock.dart  extract_app_icon.dart  get_app_arch.dart  other_functions.dart  settings.dart  system_info.dart  system_information.dart  system_screenshot.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: command.dart  entity.dart  read_value.dart  updater.dart
lib/widgets/: app_drop_region.dart  dialog_helper.dart  expand_card.dart  file_picker_box.dart  open_to_see.dart  setting_card.dart
macos/: .gitignore  Podfile
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Base.lproj/: MainMenu.xib
macos/Runner/Configs/: AppInfo.xcconfig
macos/en.lproj/: InfoPlist.strings
macos/zh-Hans.lproj/: InfoPlist.strings
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: command.rs  entity.rs  mod.rs  read_value.rs  updater.rs  util.rs
rust_builder/: pubspec.yaml
rust_builder/macos/: rust_lib_shell_assistant.podspec
test/: widget_test.dart
