[package]
name = "rust_lib_shell_assistant"
version = "1.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.8.0"
sysinfo = "0.33.1"
walkdir = "2.5.0"
plist = "1.7.0"
anyhow = "1"
rustls = { version = "0.23", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
semver = "1.0"
serde_json = "1"
serde = "1"
tokio = { version = "1", features = ["full"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
